<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:focusable="true"

        tools:context=".main.comics.ComicsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCharacter"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <ImageView
                    android:id="@+id/imgComics"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/black_to_white_gradient" />

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:padding="4dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    android:contentDescription="TODO" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/cardCharacter" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/hintColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textLabel" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/descripton"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textName" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/hintColor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />

        <TextView
            android:id="@+id/comicesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/comics"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewComics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/SeriesLabel"
            app:layout_constraintTop_toBottomOf="@+id/comicesLabel"

            />


        <TextView
            android:id="@+id/SeriesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/series"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewComics" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/relatedLinksLabel"
            app:layout_constraintTop_toBottomOf="@+id/SeriesLabel"
            />

        <TextView
            android:id="@+id/relatedLinksLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/related_links"
            android:visibility="invisible"
            android:textColor="@color/red"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewSeries" />

        <TextView
            android:id="@+id/detailsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/detais"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="invisible"
            android:drawableEnd="@drawable/arrow_drawable"
            app:layout_constraintTop_toBottomOf="@id/relatedLinksLabel" />

        <TextView
            android:id="@+id/wikiLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/wiki"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="invisible"
            android:drawableEnd="@drawable/arrow_drawable"
            app:layout_constraintTop_toBottomOf="@id/detailsLabel" />

        <TextView
            android:id="@+id/comicLinkLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/comic_link"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="invisible"
            android:drawableEnd="@drawable/arrow_drawable"
            app:layout_constraintTop_toBottomOf="@id/wikiLabel" />
        <View
            android:id="@+id/vieww"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>